--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,8 @@
               <i class="fa fa-user-plus"></i>
             </div>
             <div class="icon-info">
-              <h4>Pré cadastro</h4>
-              <p>Realize seu pré cadastro caso não tenha um cadastro existente no sistema único de saúde (SUS) do seu
+              <h4>Pré-cadastro</h4>
+              <p>Realize seu pré-cadastro caso não tenha um cadastro existente no sistema único de saúde (SUS) do seu
                 município.</p>
             </div>
           </div>
