--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-  <app-root></app-root>
+  <app-root>Carregando..</app-root>
 </body>
 
 </html>
